last bugs fixed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Train Scheduler</title>
+  <title>Maggie's Test App</title>
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -20,8 +20,8 @@
           <div class="panel-heading">
             <h3 class="panel-title" id="task"></h3>
           </div>
-        <div class="panel-body" id="task-name">
-
+          <div class="panel-body" id="task-name"></div>
+        </div>
 </div>          
 
 
